# typeless-dataclasses

./: .pre-commit-config.yaml  CHANGES.md  MANIFEST.in  Makefile  README.md  notes.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: build.yaml
experimental/: mypyconf.ini  mypyex.py  mypyplugin.py
src/: typeless_dataclasses.py
tests/: test_typeless_dataclasses.py
