[metadata]
name = typeless-dataclasses
version = 0.1.dev0
author = lemon24
description = Use dataclasses without variable annotations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lemon24/typeless-dataclasses
project_urls =
    Bug Tracker = https://github.com/lemon24/typeless-dataclasses/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
