[metadata]
name = typeless-dataclasses
version = 0.1.dev0
author = lemon24
description = Use dataclasses without variable annotations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lemon24/typeless-dataclasses
project_urls =
    Bug Tracker = https://github.com/lemon24/typeless-dataclasses/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
ignore =
    # line length, handled by bugbear B950
    E501
# make bugbear B950 agree with black
max-line-length = 80
