[metadata]
name = typeless-dataclasses
version = attr: typeless_dataclasses.__version__
author = lemon24
description = Use dataclasses without variable annotations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lemon24/typeless-dataclasses

project_urls =
    Documentation = https://github.com/lemon24/typeless-dataclasses
    Source Code = https://github.com/lemon24/typeless-dataclasses
    Issue Tracker = https://github.com/lemon24/typeless-dataclasses/issues

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

keywords = dataclasses, development


[options]
package_dir =
    = src
py_modules = typeless_dataclasses
python_requires = >=3.6


[options.extras_require]
tests =
    pytest
    coverage
    pytest-cov
    dataclasses; python_version < "3.7"
dev =
    twine
    build
    pre-commit
    tox


[tool:pytest]
addopts = --doctest-modules


[coverage:run]
branch = true
source =
    typeless_dataclasses
    tests

[coverage:paths]
source =
    src
    */site-packages


[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
select = B, E, F, W, B9
ignore =
    # line length, handled by bugbear B950
    E501
# make bugbear B950 agree with black
max-line-length = 80
